--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 <body>
     
+    <div id="main_banner">
+      <a target="_blank" title="YouTube" id="ytd_url" href="https://www.youtube.com/c/WebSlake"><i class="fab fa-youtube"></i></a>
+      <a target="_blank" title="Instagram" id="insta_url" href="https://www.instagram.com/WebSlake"><i class="fab fa-instagram"></i></a>
+      <a target="_blank" title="CodePen" id="cdpn_url" href="https://www.codepen.io/himalayasingh"><i class="fab fa-codepen"></i></a>
+      <a target="_blank" title="Website" id="web_url" href="https://www.webslake.com"><i class="fas fa-link"></i></a>
+    </div>
+    
     <div id="app_cover">
         <div id="app">
             <div id="menu_nav" class="inactive">
@@ -23,7 +30,7 @@
             </div>
             <div id="main" class="inactive">
                 <article>
-                    <img src="img/cse.png" alt="Article image">
+                    <img src="https://raw.githubusercontent.com/himalayasingh/navigation-drawer-interaction-design-1/master/img/cse.png" alt="Article image">
                     <h1>Customizing design of Google Custom Search Box using css</h1>
                     <p>Google Custom Search enables you to create a search engine for your website, your blog, or a collection of websites. You can configure your search engine to search both web pages and images. You can fine-tune the ranking, customize the look and feel of the search results, and invite your friends or trusted users to help you build your custom search engine.</p>
                 </article>
