--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <div id="main" class="inactive">
                 <article>
-                    <img src="https://raw.githubusercontent.com/himalayasingh/navigation-drawer-interaction-design-1/master/img/cse.png" alt="Article image">
+                    <img src="img/cse.png" alt="Article image">
                     <h1>Customizing design of Google Custom Search Box using css</h1>
                     <p>Google Custom Search enables you to create a search engine for your website, your blog, or a collection of websites. You can configure your search engine to search both web pages and images. You can fine-tune the ranking, customize the look and feel of the search results, and invite your friends or trusted users to help you build your custom search engine.</p>
                 </article>
