--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     
     <div id="main_banner">
-      <a target="_blank" title="YouTube" id="ytd_url" href="https://www.youtube.com/c/WebSlake"><i class="fab fa-youtube"></i></a>
+      <a target="_blank" title="YouTube" id="ytd_url" href="https://youtu.be/q1ftTnsjZh8"><i class="fab fa-youtube"></i></a>
       <a target="_blank" title="Instagram" id="insta_url" href="https://www.instagram.com/WebSlake"><i class="fab fa-instagram"></i></a>
-      <a target="_blank" title="CodePen" id="cdpn_url" href="https://www.codepen.io/himalayasingh"><i class="fab fa-codepen"></i></a>
+      <a target="_blank" title="CodePen" id="cdpn_url" href="https://codepen.io/himalayasingh/pen/xNaRYv"><i class="fab fa-codepen"></i></a>
       <a target="_blank" title="Website" id="web_url" href="https://www.webslake.com"><i class="fas fa-link"></i></a>
     </div>
     
